# HermitGrab

./: .gitignore  Cargo.toml  Description.md  Makefile.toml  README.md  REUSE.toml  TUI flow.md  entitlements.xml  mvp-implemenration-plan.md  product-requirements-document.md  pyproject.toml  test.sh  todo.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.devcontainer/cross-rust/: devcontainer-feature.json  install.sh
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: build.yaml  build_and_prerelease.yaml  build_and_release.yaml  build_devcontainer.yaml
fake_home/.config/: starship.toml
fake_home/.config/fish/: config.fish
fake_home/.hermitgrab/: hermit.yaml
fake_home/.hermitgrab/bash/: .bashrc  hermit.yaml
fake_home/.hermitgrab/fish/: config.fish  hermit.yaml
fake_home/.hermitgrab/fish/functions/: cat.fish  egrep.fish  fgrep.fish  ls.fish
fake_home/.hermitgrab/utils/bat/: hermit.yaml
fake_home/.hermitgrab/utils/eza/: hermit.yaml
fake_home/.hermitgrab/utils/fd/: hermit.yaml
fake_home/.hermitgrab/utils/ripgrep/: hermit.yaml
fake_home/.hermitgrab/utils/starship/: hermit.yaml  starship.toml
fake_home/.hermitgrab/utils/starship/starship/: starship.toml
public/: cli-docs.html  hermitgrab_website.html  index.html  install.sh  toml-docs.html
src/: action.rs  atomic_link.rs  build_doc.rs  cmd_add.rs  cmd_apply.rs  cmd_apply_tui.rs  cmd_init.rs  cmd_status.rs  commands.rs  common_cli.rs  config.rs  detector.rs  execution_plan.rs  file_ops.rs  hermitgrab_error.rs  lib.rs  links_files.rs  main.rs  ubi_int.rs
src/action/: install.rs  link.rs  patch.rs
src/commands/: cmd_add.rs  cmd_apply.rs  cmd_apply_tui.rs  cmd_init.rs  cmd_status.rs
src/config/: handlebar_math.rs
src/integrations/: mod.rs  ubi_int.rs
test_results/: add_anotherfile_link.json  add_config_test1.json  add_config_test1_expected.json  add_patch.json  add_profile_test1.json  add_testfile_link.json  add_testfile_link_expected.json  applied_patch.json  applied_patch_expected.json  exec_env_XDG_BIN_HOME_false_expected.json  exec_env_XDG_BIN_HOME_true_expected.json  exec_env_XDG_CACHE_HOME_false_expected.json  exec_env_XDG_CACHE_HOME_true_expected.json  exec_env_XDG_CONFIG_HOME_false_expected.json  exec_env_XDG_CONFIG_HOME_true_expected.json  exec_env_XDG_DATA_HOME_false_expected.json  exec_env_XDG_DATA_HOME_true_expected.json  exec_env_XDG_RUNTIME_DIR_false_expected.json  exec_env_XDG_RUNTIME_DIR_true_expected.json  exec_env_XDG_STATE_HOME_expected.json  exec_env_XDG_STATE_HOME_false_expected.json  exec_env_XDG_STATE_HOME_true_expected.json  exec_ordered.json  failed_apply.json  failed_apply_expected.json  forced_apply.json  forced_apply_expected.json  linked_status.json  linked_status_expected.json  patched_config.toml  unlinked_status.json  unlinked_status_expected.json
tests/: integration_test.rs  xdg_test.rs
tests/test_content/: hermit.toml  target.json  target2.json  test_apply.sh
tests/test_exec_order/: hermit.toml
tests/test_xdg_variables/: config.fish  hermit.toml
tests/test_xdg_variables/completions/: rustup.fish
web/: config.toml
web/content/: _index.md  cli-reference.md  toml-configuration.md
web/public/: .keep  index.html  sitemap.xml
web/public/cli-reference/: index.html
web/public/toml-configuration/: index.html
web/templates/docs/: base.html  page.html
web/templates/shortcodes/: featurecard.html
