[package]
name = "hermitgrab"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["integrations"]
integrations = ["ubi"]
ubi = ["dep:ubi"]
experimental = ["interactive"]
interactive = [ "dep:ratatui" ]

[dependencies]
anyhow = "1.0.101"
blake3 = { version = "1.8.3", features = ["mmap", "neon"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = "0.29.0"
derive-where = "1.6.0"
directories = "6.0.0"
enum_dispatch = "0.3.13"
git2 = { version = "0.20.4", features = [
    "vendored-libgit2",
    "vendored-openssl"
] }
handlebars = "6.4.0"
hostname = "0.4.2"
itertools = "0.14.0"
json-patch = "4.1.0"
jsonc-parser = { version = "0.29.0", features = ["serde"] }
log = "0.4.29"
oauth2 = "5.0.0"
octocrab = "0.49.5"
os_info = "3.14.0"
ratatui = { version = "0.30.0", features = ["crossterm"], optional = true}
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
shellexpand = "3.1.1"
simple_logger = "5.1.0"
strum = "0.27.2"
sys-info = "0.9.1"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
toml_edit = { version = "0.23.9", features = ["serde"] }
ubi = { version = "0.9.0", optional = true, features = ["logging"] }
# Fixed to 0.2.0 for ratatui compatability
unicode-width = "0.2.2"
which = "8.0.0"
whoami = "2.1.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = "s"
codegen-units = 1

[dev-dependencies]
pretty_assertions = "1.4.1"
